@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-03-05 Wed 13:47 -->
+<!-- 2025-03-09 Sun 17:50 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=1024, initial-scale=1" />
 <title>Change Log</title>
@@ -230,12 +230,12 @@
 
 <tr>
 <td class="org-right"><b>Updated:</b></td>
-<td class="org-left"><i>2025-03-05 13:47:37</i></td>
+<td class="org-left"><i>2025-03-09 17:50:51</i></td>
 </tr>
 
 <tr>
 <td class="org-right"><b>Generated:</b></td>
-<td class="org-left"><i>2025-03-05 13:47:41</i></td>
+<td class="org-left"><i>2025-03-09 17:50:52</i></td>
 </tr>
 </tbody>
 </table>
@@ -384,6 +384,7 @@ Copyright &copy; 2025 Mitch Richling. All rights reserved.
 <li>mandelbrot_meanOrbit.cpp</li>
 <li>simone_attractor.cpp</li>
 <li>demo_data_and_filter.cpp</li>
+<li>mandelbrot_minOrbit</li>
 </ul></li>
 <li>Updated
 <ul class="org-ul">
